Archive2/8f/08392331847179/output
main.cpp:9:5: error: no matching function for call to 'say'
    say<hello>();
    ^~~~~~~~~~
main.cpp:5:8: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'G'
G<int> say();
       ^
1 error generated.
